--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -2,22 +2,23 @@
 
   <h1>
     {{model.title}}
-    <span style="font-size: 16px" class="pull-right">
+    <span class="pull-right">
       <a href="" ng-if="editMode" title="add new widget" ng-click="addWidgetDialog()">
-        <i class="glyphicon glyphicon-plus-sign"></i>
+        <i class="fa fa-plus"></i>
       </a>
       <a href="" ng-if="editMode" title="edit dashboard" ng-click="editDashboardDialog()">
-        <i class="glyphicon glyphicon-cog"></i>
+        <i class="fa fa-gear"></i>
       </a>
       <a href="" ng-if="editable" title="{{editMode ? 'save changes' : 'enable edit mode'}}" ng-click="toggleEditMode()">
-        <i class="glyphicon" x-ng-class="{'glyphicon-edit' : !editMode, 'glyphicon-save' : editMode}"></i>
+        <i class="fa" x-ng-class="{'fa-edit' : !editMode, 'fa-save' : editMode}"></i>
       </a>
-       <a href="" ng-if="editMode" title="delete" ng-click="deleteBoard()">
-        <i class="glyphicon glyphicon-delete"></i>
+      <a href="" ng-if="editMode" title="delete" ng-click="deleteBoard()">
+        <i class="fa fa-times"></i>
       </a>
       <a href="" ng-if="editMode" title="undo changes" ng-click="cancelEditMode()">
-        <i class="glyphicon glyphicon-repeat adf-flip"></i>
+        <i class="fa fa-undo adf-flip"></i>
       </a>
+
     </span>
   </h1>
 
